...
    "tab.ask": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Ask"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "问熊猫"
...
    "tab.profile": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "我的"
...
    },
    "ask.done": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "完成"
...
    },
    "tab.vp": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "VP"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "VP"
...
